src/test/deca/context/valid/non_provided/field_protected.deca
// Description:
//    Conflit dans les paramètres lors
//    de la déclaration d'une méthode
//
// Resultats:
//    
// 
// Historique:
//    cree le 21/01/2020

class A {
    protected int x;
}

{
    int a;

    a = 5 + 3;
}